[package]
name = "rustweb"
version = "0.2.5"
edition = "2021"
authors = ["George Barwood"]
license = "MIT OR Apache-2.0"
description = "Rust-based web server"
repository = "https://github.com/georgebarwood/rustweb"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
axum = { version = "0.4.0", default-features = false, features = ["multipart","http1"] }
tokio = { version = "1.13.0", features = ["macros","rt-multi-thread","parking_lot"] }
tower = { version = "0.4.10" }
tower-cookies = "0.4.0"
argon2rs = "0.2.5"
serde = { version = "1.0.142", features = ["derive","rc"] }
rmp-serde = "1.1.0"
reqwest = "0.11.11"

#rustdb = { path = "../rustdb" } 
rustdb = { version = "2.7.1" }
mimalloc = { version = "0.1.26", default-features = false }
lettre = { version = "0.10.1" }
flate3 = "0.1.21"

#console-subscriber = { path = "../console-main/console-subscriber" }
#axum-debug = "0.2.0"


